almost finished - database storing data commented

--- a/views/facebook.ejs
+++ b/views/facebook.ejs
@@ -6,7 +6,6 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="stylesheets/style.css">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <!-- jQuery library -->
@@ -14,7 +13,7 @@
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<link rel='stylesheet' href='/stylesheets/style.css' />
+<!-- <link rel='stylesheet' href='/stylesheets/style.css' /> -->
 
 <script type="text/javascript">
 
@@ -166,30 +165,6 @@ $(document).ready(function() {
 						<div class="input-group input-group-lg">
 							<span class="input-group-addon" id="sizing-addon4">Current Position</span>
 							<input id="current_position" class="form-control" placeholder="Current Position"
-								aria-describedby="sizing-addon1">
-						</div>
-					</div>
-				</div>
-
-				<br>
-
-				<div class="row">
-					<div class="col-lg-10">
-						<div class="input-group input-group-lg">
-							<span class="input-group-addon" id="sizing-addon3">Known Languages</span>
-							<input id="known_languages" type="text" class="form-control" placeholder="Language(s)"
-								aria-describedby="sizing-addon3">
-						</div>
-					</div>
-				</div>
-
-				<br>
-
-				<div class="row">
-					<div class="col-lg-10">
-						<div class="input-group input-group-lg">
-							<span class="input-group-addon" id="sizing-addon4">Telephone Number</span>
-							<input id="mobile_phone_number" type="text" class="form-control" placeholder="Telephone Number"
 								aria-describedby="sizing-addon1">
 						</div>
 					</div>
